# himg

./: .gitignore  .rubocop.yml  Appraisals  CHANGELOG.md  Cargo.toml  Gemfile  LICENSE-MIT.txt  README.md  Rakefile  Steepfile  himg.gemspec  test.html.rbd
.cargo/: config.toml
.github/workflows/: build-gems.yml  main.yml  website.yml
ext/himg/: Cargo.toml  extconf.rb
ext/himg/examples/: file.rs
ext/himg/examples/assets/: github_profile_offline.html
ext/himg/src/: html_to_image.rs  image_size.rs  lib.rs  logger.rs  main.rs  net_fetcher.rs  options.rs  renderer.rs  writer.rs
gemfiles/: plain_ruby.gemfile  rails_5.gemfile  rails_6.gemfile  rails_7.gemfile  rails_7_0.gemfile  rails_7_1.gemfile  rails_7_2.gemfile  rails_8.gemfile
lib/: himg.rb
lib/himg/: base_url.rb  cli.rb  railtie.rb  version.rb
lib/himg/railtie/: controller_config.rb  template_handler.rb
sig/: himg.rbs
spec/: base_url_spec.rb  cli_spec.rb  himg_spec.rb  rails_helper.rb  renderer_spec.rb  spec_helper.rb
spec/dummy/: dummy_rails
spec/dummy/app/controllers/: users_controller.rb
spec/dummy/app/models/: user.rb
spec/dummy/app/views/users/: show.himg.erb  show.html.erb
spec/dummy/config/: application.rb
spec/fixtures/: profile_test.html
spec/railtie/: controller_spec.rb  request_spec.rb  template_handler_spec.rb
src/: html_to_png.rs  image_size.rs  main.rs  options.rs
website/: index.html
