# This Cargo.toml is here to let externals tools (IDEs, etc.) know that this is
# a Rust project. Your extensions dependencies should be added to the Cargo.toml
# in the ext/ directory.

[workspace]
members = ["./ext/himg"]
resolver = "2"

[profile.release]
# By default, debug symbols are stripped from the final binary which makes it
# harder to debug if something goes wrong. As we don't mind a larger binary size
# we can keep these in the release build so that you can debug if needed.
debug = true
