[package]
name = "himg"
description = "ruby bindings to expose a blitz html->png pipeline"
version = "0.0.1"
edition = "2024"
authors = ["James Edwards-Jones <git@jamedjo.co.uk>"]
license = "MIT"
publish = false

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
magnus = { version = "0.7.1" }
rb-sys = { version = "0.9", features = ["stable-api-compiled-fallback"] }
blitz-traits = { version = "0.1.0-alpha.1" }
blitz-dom = { version = "0.1.0-alpha.1" }
blitz-net = { version = "0.1.0-alpha.1" }
blitz-renderer-vello = { version = "0.1.0-alpha.1" }
blitz-html = { version = "0.1.0-alpha.1" }
tokio = { version = "1.42", features =  ["rt-multi-thread", "macros"] }
png = "0.17"

#euclid = { workspace = true }
#image = { workspace = true }
#env_logger = "0.11"
#tracing-subscriber = "0.3"

[build-dependencies]
rb-sys-env = "0.2.2"

[dev-dependencies]
rb-sys-test-helpers = { version = "0.2.2" }
